name:                scotty-tls
version:             0.3.0.0
synopsis:            TLS for Scotty
description:         Run your Scotty apps over TLS
homepage:            https://github.com/dmjio/scotty-tls.git
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Extra-source-files:
        README.md
        examples/Main.hs
library
  exposed-modules:     Web.Scotty.TLS
  other-extensions:    RankNTypes
  build-depends:       base >=4.3.1 && < 5,
                       scotty >=0.7.0,
                       warp >= 1.3.4.1,
                       warp-tls >=1.4.1.4,
                       wai >= 1.3.0.1,
                       transformers >= 0.3.0.0
  GHC-options: -Wall -fno-warn-orphans
  default-language:    Haskell2010
source-repository head
  type:     git
  location: git://github.com/dmjio/scotty-tls.git