name:                scotty-tls
version:             0.5.0
synopsis:            TLS for Scotty
description:         Run your Scotty apps over TLS
homepage:            https://github.com/dmjio/scotty-tls.git
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Extra-source-files:
        CHANGELOG.md
        README.md
        examples/Main.hs
library
  exposed-modules:     Web.Scotty.TLS
  other-extensions:    RankNTypes
  build-depends:       base < 5,
                       scotty >=0.20.0,
                       warp >= 3.3,
                       warp-tls >= 3.4,
                       wai >= 3.2,
                       transformers >= 0.3.0.0
  GHC-options: -Wall -fno-warn-orphans
  default-language:    Haskell2010
source-repository head
  type:     git
  location: git://github.com/dmjio/scotty-tls.git
