name:                scotty-tls
version:             0.6.0
synopsis:            TLS for Scotty
description:         Run your Scotty apps over TLS
homepage:            https://github.com/dmjio/scotty-tls.git
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          code@dmj.io
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Extra-source-files:
        CHANGELOG.md
        README.md
        examples/Main.hs
library
  exposed-modules:     Web.Scotty.TLS
  other-extensions:    RankNTypes
  build-depends:       base < 5,
                       scotty >=0.21.0 && < 0.23,
                       warp >= 3.3 && < 3.5,
                       warp-tls >= 3.4 && < 3.5,
                       wai >= 3.2 && < 3.3,
                       transformers >= 0.3.0.0 && < 0.7
  GHC-options: -Wall -fno-warn-orphans
  default-language:    Haskell2010
source-repository head
  type:     git
  location: git://github.com/dmjio/scotty-tls.git
